--- a/csstemplate.html
+++ b/csstemplate.html
@@ -188,7 +188,7 @@
 </div>
 <div class="container">
 	<div>
- <h1 style="font-size: 60px; margin-bottom: 15px; color: black;">Interior Design</h1>
+ <h1 style="font-size: 60px; margin-bottom: 15px; color: black;">Chidera Design</h1>
  <h1><span style= "border-bottom: 5px solid red; border-radius: 4px;">Sh</span>owcase.</h1><br>
  <div class="bigimage">
  <img src="images/showcase1.jpg">
